// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link with modifiers with active and child truthy 1`] = `
<span
  className="menu__link menu__link--child"
>
  test
</span>
`;

exports[`Link with modifiers with active truthy 1`] = `
<span
  className="menu__link menu__link--active"
>
  test
</span>
`;

exports[`Link with modifiers with child truthy 1`] = `
<span
  className="menu__link menu__link--child"
>
  test
</span>
`;

exports[`Link with url should render link with href 1`] = `
<a
  className="menu__link"
  href="/test"
  target="_self"
>
  link with href
</a>
`;

exports[`Link with url should render link with target 1`] = `
<a
  className="menu__link"
  href="/test"
  target="_blank"
>
  link
</a>
`;

exports[`Link without url should render link properly 1`] = `
<span
  className="menu__link"
>
  my link
</span>
`;

exports[`Link without url should render link properly with title instead of children 1`] = `
<span
  className="menu__link"
>
  my link
</span>
`;
